# Evalyn

./: .dockerignore  .gitignore  JOB_INTEGRATION.md  JOB_WORKFLOW_UPDATE.md  LICENSE  README.md  TESTING_GUIDE.md  check_tables.py  create_test_admin.py  debug_api.py  debug_api_connectivity.py  debug_application.py  debug_application_urllib.py  debug_db_query.py  docker-compose.yml  package-lock.json  render.yaml  test_dns.py  test_ip_conn.py  test_proxy.py  test_status_query.py
backend/: .dockerignore  .gitignore  Dockerfile  INDEED_API_TROUBLESHOOTING.md  INDEED_INTEGRATION_GUIDE.md  INDEED_QUICK_REFERENCE.md  README.md  add_onboarding_columns.py  add_recording_column.py  add_salary_columns.py  add_sample_jobs.py  alembic.ini  alter_enum.py  alter_onboarding_pg.py  check_integrations.py  check_users.py  compare_schema.py  create_admin_fixed.py  create_default_user.py  create_onboarding_table.py  create_sample_jobs_api.py  create_tables.py  db_output.txt  db_schema_output.txt  debug_db.py  debug_emails.py  debug_users.py  diagnostic.py  diagnostic_db.py  evalyn.db  evalyn.db-shm  evalyn.db-wal  fix_applications_schema_sqlite.py  fix_jobstatus_enum.py  fix_schema.py  fix_schema_comprehensive.py  full_inspect.py  full_schema.txt  inspect_apps.py  inspect_apps_v2.py  (+27 more)
backend/migrations/: env.py
backend/migrations/versions/: 98b7f714713f_initial_postgres_migration.py  a1b2c3d4e5f6_create_onboarding_tables.py  d976a6fd4f06_add_missing_posts_columns.py  eb8d7a123abc_update_enums.py  (+1 more)
backend/scripts/: setup_db.py  setup_db.sh
backend/tests/: conftest.py  test_flow.py
(+198 files in other folders)
