[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.0.1",
    "langgraph-cli[inmem]>=0.4.11",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.23.0",
]
